# wot-replay-test-dataset

./: Cargo.toml  README.md
src/: main.rs
test_replays/: 1-0_9_10_0-36_fishing_bay-EU-full.wotreplay  1-0_9_12_0-36_fishing_bay-ASIA-full.wotreplay  1-0_9_13_0-02_malinovka-EU-full.wotreplay  1-0_9_14_0-35_steppes-EU-full.wotreplay  1-0_9_14_1-34_redshire-ASIA-full.wotreplay  1-0_9_15_0-13_erlenberg-EU-full.wotreplay  1-0_9_15_1-10_hills-EU-full.wotreplay  1-0_9_15_2-07_lakeville-NA-full.wotreplay  1-0_9_16_0-06_ensk-EU-full.wotreplay  1-0_9_17_0-44_north_america-EU-full.wotreplay  1-0_9_17_1-34_redshire-EU-full.wotreplay  1-0_9_18_0-114_czech-ASIA-full.wotreplay  1-0_9_19_0-84_winter-EU-full.wotreplay  1-0_9_19_1-29_el_hallouf-EU-full.wotreplay  1-0_9_20_0-01_karelia-EU-full.wotreplay  1-0_9_20_1-28_desert-ASIA-full.wotreplay  1-0_9_21_0-34_redshire-EU.wotreplay  1-0_9_22_0-07_lakeville-NA-full.wotreplay  1-0_9_7_0-92_stalingrad-EU-full.wotreplay  1-0_9_8_0-18_cliff-EU-full.wotreplay  1-0_9_8_1-06_ensk-EU-full.wotreplay  1-0_9_9_0-06_ensk-EU-full.wotreplay  1-1_0_0_0-11_murovanka-EU-full.wotreplay  1-1_0_0_1-36_fishing_bay-EU-full.wotreplay  1-1_0_0_2-04_himmelsdorf-NA-full.wotreplay  1-1_0_0_3-08_ruinberg-EU-full.wotreplay  1-1_0_1_0-23_westfeld-EU-full.wotreplay  1-1_0_1_1-63_tundra-EU-full.wotreplay  1-1_0_2_0-23_westfeld-EU-full.wotreplay  1-1_0_2_1-14_siegfried_line-EU-full.wotreplay  1-1_0_2_2-04_himmelsdorf-NA-full.wotreplay  1-1_0_2_3-05_prohorovka-EU-full.wotreplay  1-1_0_2_4-10_hills-EU-full.wotreplay  1-1_10_0_0-83_kharkiv-EU-full.wotreplay  (+95 more)
