[package]
name = "wot-replay-test-dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
serde = "1.0.152"
serde_json = "1.0.91"
dashmap = "5.4.0"
wot_replay_parser = "0.2.2"
utils = { package = "wot-battle-results-parser-utils", version = "0.2.0"}
